@@ -70,6 +70,10 @@ Bug fixes since 1.1
 - ZonedChronology
   Fixed getting text values for fields from getAs[Short]Text(int value, Locale locale).
 
+- DateConverter, CalendarConverter, AbstractDateTime
+  Fixed conversions to and from java.util.Date and java.util.Calendar where
+  time zone rules differ between JDK and Joda-Time.
+
 Enhancements since 1.1
 ----------------------
 - ChronologyType
